kube/lookie/trawl/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: trawl
  namespace: default
  labels:
    app.kubernetes.io/name: trawl
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: trawl
  ports:
    - name: http
      port: 8191
      protocol: TCP
      targetPort: 8191
